[workspace]
resolver = "3"

members = ["onyx", "onyx_api", "web", "cli", "nrpm_tarball"]

[workspace.dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
blake3 = "1.8.2"
tar = "0.4.44"
tempfile = "3.20.0"
reqwest = { version = "0.12.20", features = ["multipart", "json"] }
redb = "2.6.0"
serde_json = "1.0.140"
nanoid = "0.4.0"
bincode = { version = "1.0.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
