[package]
name = "nrpm"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "cli for interacting with noir package manager"
repository = "https://github.com/chancehudson/nrpm.git"

[[bin]]
name = "nrpm"
path = "src/main.rs"

[features]
default = ["onyx_api", "nrpm_tarball"]
#release = ["onyx_api_release", "nrpm_tarball_release"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
nanoid = { workspace = true }

#onyx_api_release = { package = "onyx_api", version = "0.0.0", optional = true }
onyx_api = { path = "../onyx_api", features = ["publish"], optional = true }

#nrpm_tarball_release = { version = "0.0.0", optional = true }
nrpm_tarball = { path = "../nrpm_tarball", optional = true }

clap = "4.5.40"
dialoguer = "0.11.0"
open = "5.3.2"
