[package]
name = "nrpm"
version = "0.4.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "cli for interacting with noir package manager"
repository = "https://github.com/chancehudson/nrpm.git"
rust-version = "1.88.0"

[[bin]]
name = "nrpm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
nanoid = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

nrpm_tarball = { workspace = true, features = ["fs"] }
onyx_api = { workspace = true, features = ["publish"] }
nargo_parse = { workspace = true }

clap = { version = "4.5.40", features = ["cargo"] }
dialoguer = "0.11.0"
open = "5.3.2"
toml = { version = "0.9.7", features = ["serde"] }
dirs = "6.0.0"
indicatif = "0.18.0"
pathdiff = "0.2.3"
