[package]
name = "nrpm_tarball"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "tarballs for noir package manager"
repository = "https://github.com/chancehudson/nrpm.git"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }

ignore = "0.4.23"
gix = { version = "0.73.0", features = ["tree-editor", "excludes"] }
gix-pack = "0.60.0"
walkdir = "2.5.0"
