[package]
name = "nrpm_tarball"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "tarballs for noir package manager"
repository = "https://github.com/chancehudson/nrpm.git"

[features]
git = ["gix", "gix-pack", "tempfile", "walkdir"]
fs = ["tempfile", "walkdir"]

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true, optional = true }
log = { workspace = true }

nargo_parse = { workspace = true }

ignore = "0.4.23"
gix = { version = "0.73.0", features = ["tree-editor", "excludes"], optional = true }
gix-pack = { version = "0.60.0", optional = true }
walkdir = { version = "2.5.0", optional = true }
