[package]
name = "onyx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
redb = { workspace = true }

common = { path = "../common" }
db = { path = "../db", features = ["server"] }

axum = { version = "0.8.4", features = ["http2", "multipart"] }
nanoid = "0.4.0"
rand = "0.9.1"
bcrypt = "0.17.0"
tower-http = { version = "0.6.6", features = ["cors"] }

bincode = { version = "1.0.0" }
