[package]
name = "onyx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
nanoid = { workspace = true }
bincode = { workspace = true }

onyx_api = { workspace = true, features = ["server"] }
nrpm_tarball = { workspace = true }

axum = { version = "0.8.4", features = ["http2", "multipart"] }
rand = "0.9.1"
bcrypt = "0.17.0"
tower-http = { version = "0.6.6", features = ["cors"] }

tokio-util = "0.7.15"

[dev-dependencies]
serde_json = { workspace = true }
axum-test = "15.0"
