[package]
name = "onyx_api"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "api for interacting with onyx servers"
repository = "https://github.com/chancehudson/nrpm.git"

[features]
server = ["redb", "bincode", "publish", "tokio", "nrpm_tarball", "tar"]
publish = ["bincode"]

[dependencies]
serde = { workspace = true }
redb = { workspace = true, optional = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
bincode = { workspace = true, optional = true }
blake3 = { workspace = true }
nanoid = { workspace = true }
tar = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

nrpm_tarball = { workspace = true, optional = true }

nargo_parse = { path = "../nargo_parse" }

hex = "0.4.3"
