[package]
name = "tarball"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }

bincode = "1.0.0"
ignore = "0.4.23"
