[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }

db = { path = "../db" }

dioxus = { version = "0.6.3", features = ["router"] }
serde_json = "1.0.140"
dioxus-web = "0.6.3"
gloo-storage = "0.3"
